--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,11 +2,17 @@
 header {
   background-image: url("../images/batthern.png");
   background-attachment: fixed;
-  background-color: orange;
+  background-color:#ff79c6;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: start;
+}
+
+header.headpanel {
+  position: sticky;
+  top: 0px;
+  width: 100vw;
 }
 
  header .portrait {
