--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -13,7 +13,7 @@ nav {
   justify-content: space-between;
 }
 
-nav span {
+nav .logo {
   opacity: 0;
   line-height: 100%;
   margin-top: 0.7em;
@@ -24,7 +24,7 @@ nav span {
 }
 
 nav div {
-  padding: 1em 1.5em;
+  padding: 0.5em 1.8em;
   height: 100%;
   display: flex;
   flex-direction: column;
