--- a/public/styles/new-twit.css
+++ b/public/styles/new-twit.css
@@ -53,7 +53,7 @@
 }
 
 .error p {
-  color:black;
+  color: whitesmoke;
   padding: 0;
   margin: 0;
   text-align: center;
@@ -89,6 +89,7 @@
 
   /* font */
   font-weight: 600;
+  color: whitesmoke;
 }
 
 .new-tweet input {
